learning_project/k8s/beta_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-beta

spec:
  replicas: 1

  selector:
    matchLabels:
      agent: beta

  template:
    metadata:
      labels:
        agent: beta

    spec:
      containers:
        - name: agent
          image: agent-image:1.0
          imagePullPolicy: Never

          ports:
            - containerPort: 50000
